test/zinc_source/compile_errors/functions/19_ufcs_no_visible_function.zn
// expected-error: no member 'missing' and no visible function 'missing' for UFCS

fn main() {
    value = 1
    print(value.missing())
}
